--- a/appchu/WebContent/css/common.css
+++ b/appchu/WebContent/css/common.css
@@ -5,11 +5,12 @@
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 
 * {
+	border: red solid 1px;
 	font-family: Lato;
 }
 
 #wrap {
-	width: 1000px;
+	width: 100%;
 	height: 100%;
 	margin: 0 auto;
 }
