width 1200px,body text-align 변경

--- a/appchu/WebContent/css/common.css
+++ b/appchu/WebContent/css/common.css
@@ -5,12 +5,13 @@
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 
 * {
-	border: red solid 1px;
 	font-family: Lato;
 }
-
+body {
+	text-align: -webkit-center;
+}
 #wrap {
-	width: 100%;
+	width: 1200px;
 	height: 100%;
 	margin: 0 auto;
 }
