--- a/appchu/WebContent/css/loginjoin.css
+++ b/appchu/WebContent/css/loginjoin.css
@@ -39,18 +39,18 @@
 
 /* TOTAL */
 
-.login-slide-page {
+/* .login-slide-page {
 	width:1220px;
 	margin-left: -110px;
-	/* margin-top: -30px; */
-	/* background-color: ; */
+	margin-top: -30px;
+	background-color: ;
 }
 .signup-slide-page {
 	width:1220px;
 	margin-left: -110px;
-	/* margin-top: -30px; */
-	/* background-color: ; */
-}
+	margin-top: -30px;
+	background-color: ;
+} */
 
 .login-content {
 	padding: 0px 20px 10px 20px;
