--- a/appchu/WebContent/css/shop-list.css
+++ b/appchu/WebContent/css/shop-list.css
@@ -1,15 +1,8 @@
 @CHARSET "EUC-KR";
 
 * {
-/*    	border: 1px solid red; */   
+    	/* border: 1px solid red;    */
 }
-
-#wrap {
-	width: 1000px;
-	height: 100%;
-	margin: 0 auto;
-}
-
 
 header{
 /* 	border: 1px solid red; */
@@ -87,7 +80,7 @@ nav{
 	position: relative;
 	/* 堪檜 熱薑 */
 	height: 100%;
-/* 	text-align: center; */
+ 	text-align: left; 
 	padding: 10px 15px;
 }
 
@@ -102,8 +95,75 @@ nav{
 
 .container {
 	width: 100%;
+
 }
 .thumbnail>img {
 	width: 286px;
-	height: 179px;
+	height: 165px;
+	border-top-left-radius: 5px;
+   border-top-right-radius: 5px;
 }
+
+.col-lg-4 {
+	width: 23%;
+	padding-right: 6px;
+	padding-left: 6px;
+	margin-left: 10px;
+	margin-right: 10px;
+	
+}
+
+.thumbnail {
+	border-radius: 5px;
+	line-height: 1;
+}
+
+.row {
+	margin-right: -7px;
+	margin-left: -7px;
+}
+.starrr{
+	width: 100px;
+}
+
+.list-group-item-text {
+	height: 40px;
+	margin: 0 0 0px;
+	width: 80%;
+}
+
+.thumbnail a > img {
+	height: 165px;
+}
+/* で機 */
+/* で機 創檜 */
+.modal-dialog {
+	width: 940px;
+}
+
+ .carousel-inner>.item>img{
+ width:635px;
+ height: 400px;
+ 
+ 
+ }
+ .col-sm-2 > .thumbnail > img {
+  width: 118px;
+ height: 69px;
+ }
+ 
+ .btn {
+ padding: 0px 0px;
+ }
+ 
+ .btn-group > .btn {
+ 	padding: 5px 10px;
+ }
+ 
+ 
+ section {
+ 	background-color: Beige;
+ }
+ p {
+ 	margin: 0 0 0px;
+ }
