--- a/appchu/WebContent/css/common.css
+++ b/appchu/WebContent/css/common.css
@@ -5,7 +5,7 @@
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 
 * {
-	font-family: Lato;
+	font-family: 'Lato';
 }
 body {
 	text-align: -webkit-center;
