--- a/beautyChuSpring/src/main/webapp/view/header.html
+++ b/beautyChuSpring/src/main/webapp/view/header.html
@@ -7,10 +7,10 @@
 <!-- 상단 고정 메뉴 -->
 <div id='cssmenu'>
 	<ul>
-		<li id='menu-icon'><a href='#'>Beauty Chu♥</a></li>
-		<li><a href='#'>Shop</a></li>
-		<li><a href='#'>Man</a></li>
-		<li><a href='#'>Woman</a></li>
+		<li id='menu-icon'><a href='main.html'>Beauty Chu♥</a></li>
+		<li><a href='shop-list.html'>Shop</a></li>
+		<li><a href='style-list.html'>Man</a></li>
+		<li><a href='style-list.html'>Woman</a></li>
 		<li><a href='#'>celebrity</a></li>
 
 		<li><form method="get" action="/search" id="search">
