--- a/beautyChuSpring/src/main/webapp/css/main.css
+++ b/beautyChuSpring/src/main/webapp/css/main.css
@@ -23,10 +23,18 @@
 	width: 300px;
 	height: 200px;
 }
-header {
-	z-index: 150;
-	
+
+#title-container {
+	paddin: 20px;
+	left: 0px;
+	width: 100%;
+	text-align: center;
+	background-color: #fff;
 }
-#header-container {
-	z-index: 0;
+
+#title-container>h1 {
+	width: 100%;
+	position: relative;
+	font-size: 3.0em;
+	font-weight: bold;
 }
