--- a/beautyChuSpring/src/main/webapp/css/shop-list.css
+++ b/beautyChuSpring/src/main/webapp/css/shop-list.css
@@ -1,7 +1,7 @@
 @CHARSET "EUC-KR";
 
 * {
-    	/* border: 1px solid red;    */
+    	 /* border: 1px solid red;    */ 
 }
 
 header{
@@ -113,26 +113,27 @@ nav{
 	padding-left: 6px;
 	margin-left: 10px;
 	margin-right: 10px;
+	height: 100%;
 	
 }
 
 .thumbnail {
 	border-radius: 5px;
-	line-height: 1;
+/* 	line-height: 1; */
 }
 
 .row {
-	margin-right: -7px;
-	margin-left: -7px;
+	margin-right: 0px;
+	margin-left: 0px;
 }
 .starrr{
 	width: 100px;
 }
 
 .list-group-item-text {
-	height: 40px;
-	margin: 0 0 0px;
-	width: 80%;
+/* 	height: 40px;
+	margin: 0 0 0px; */
+	width: 70%;
 }
 
 .thumbnail a > img {
@@ -165,14 +166,25 @@ nav{
  
  
  section {
- 	background-color: Beige;
+ /* 	background-color: Beige; */
  }
- 
+ /* °Å¸®  */
  p {
  	margin: 0 0 0px;
+ 	float: right;
  }
  
 .col-md-8 {
 	padding: 0px;
+}
+.col-md-6 {
+	width: 223px;
+}
+.col-xs-12 {
+	padding-left: 0px;
+	padding-right: 0px; 
+}
+#distance {
+	margin-right: 7px;
 }
  
