--- a/beautyChuSpring/src/main/webapp/view/style-list.html
+++ b/beautyChuSpring/src/main/webapp/view/style-list.html
@@ -24,6 +24,16 @@
 
 <script type='text/javascript'
 	src='http://code.jquery.com/jquery-1.7.2.js'></script>
+	
+	<!-- jQuery -->
+	<script src="../js/resources/jquery.js"></script>
+
+	<!-- Bootstrap Core JavaScript -->
+	<script src="../js/resources/bootstrap.min.js"></script>
+	
+	<!-- 별점 -->
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
+  <script src="../js/resources/starrr.js"></script>
 
 </head>
 
@@ -123,7 +133,7 @@
 
 				<div class="col-md-3 col-sm-6 hero-feature">
 					<div class="thumbnail">
-						<img src="../images/style-list/s7.png" alt="">
+						<img src="../images/style-list/s1.png" alt="">
 						<div class="caption">
 							<h3>Feature Label</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -369,23 +379,14 @@
 </div>
 </div>
 	
-	
-	
 		
 	
 	<script type="text/javascript">
+	$('header').load('header.html');
+	$('footer').load('footer.html');
 		//window.setTimeout('window.location.reload()', 5000); //60초마다 새로고침
 	</script>
 
-	<!-- jQuery -->
-	<script src="../js/resources/jquery.js"></script>
-
-	<!-- Bootstrap Core JavaScript -->
-	<script src="../js/resources/bootstrap.min.js"></script>
-	
-	<!-- 별점 -->
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
-  <script src="../js/resources/starrr.js"></script>
 	
 </body>
 </html>
