--- a/beautyChuSpring/src/main/webapp/css/common.css
+++ b/beautyChuSpring/src/main/webapp/css/common.css
@@ -1,28 +1,18 @@
+/* 절대 손대지 말것!!!!!!!!!!!!!!! 특히 기현이!!! */
 @CHARSET "UTF-8";
-
-@import url(http://fonts.googleapis.com/css?family=Lato:400,700,900);
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 
+
 * {
-	/* font-family: 'Nanum Gothic', '나눔고딕', 'Gulim'; */
+	font-family: "Nanum Gothic", "nanum gothic", "나눔 고딕", "Gulim", sans-serif;
 }
-body {
-	
-}
-#wrap {
+
+.wrap-chu {
 	width: 1200px;
 	height: 100%;
 	margin: 0 auto;
 }
 
-header {
-	height: 60px;
-}
-
-footer {
-	height: 60px;
-	text-align: center;
-}
-#clear {
+.div-clear {
 	clear: both;
 }
