--- a/beautyChuSpring/src/main/webapp/view/yun-test.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-test.html
@@ -14,21 +14,20 @@
 #changediv {
 	position: relative;
 	width: 300px;
-	height: 300px; 
+	height: 300px;
 }
 
 #div1 {
 	background-color: red;
- 	width: 100%;
+	width: 100%;
 	height: 100%;
 	z-index: 5;
 	position: absolute;
-	display: none;
 }
 
 #div2 {
 	background-color: green;
- 	width: 100%;
+	width: 100%;
 	height: 100%;
 	z-index: 2;
 	position: absolute;
@@ -36,7 +35,7 @@
 
 #div3 {
 	background-color: blue;
- 	width: 100%;
+	width: 100%;
 	height: 100%;
 	z-index: 3;
 	position: absolute;
@@ -51,15 +50,22 @@
 		<!-- header 건들지 말긔! -->
 	</header>
 
- 
+
 
 	<div id="wrap-chu" class="wrap-chu">
 
 
 		<div id=changediv>
-			<div id=div1>1</div>
-			<div id=div2>2</div>
-			<div id=div3>3</div>
+			<div id=div1>
+				1
+				<button id='btn1' type="button">x</button>
+			</div>
+			<div id=div2>2
+							<button id='btn1' type="button">x</button>
+			</div>
+			<div id=div3>3
+							<button id='btn1' type="button">x</button>
+			</div>
 		</div>
 
 
@@ -77,15 +83,17 @@
 
 
 	<!-- header, footer 로드 스크립트!! -->
-	<script type="text/javascript" src='../js/resources/jquery-2.1.1.min.js'></script>
-	
-	
-	
-	
-	
+	<script type="text/javascript"
+		src='../js/resources/jquery-2.1.1.min.js'></script>
 	<script>
 		$('header').load('common/header.html');
 		$('footer').load('common/footer.html');
+
+		$('#btn1').click(function() {
+			$('div').fadeOut("fast");
+			//			$('#div1').css("display","none");
+		})
+
 		window.setTimeout('window.location.reload()', 7000); //60초마다 새로고침
 	</script>
 
