yun shop 70% 완료...

--- a/beautyChuSpring/src/main/webapp/view/yun-test.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-test.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Beauty Chu~♥</title>
-
-<link rel="shortcut icon" href="../images/favicon.ico"
-	type="image/x-icon">
-<link rel="icon" href="../images/favicon.ico" type="image/x-icon">
-<link rel="stylesheet" type="text/css" href="../css/common.css">
-
+<!-- 
 <style type="text/css">
 /* 스타일 적용 공간! */
 #changediv {
@@ -36,10 +26,10 @@ div{
 <body>
 
 	<header>
-		<!-- header 건들지 말긔! -->
+		header 건들지 말긔!
 	</header>
 
-
+ -->
 
 	<div id="wrap-chu" class="wrap-chu">
 
@@ -53,13 +43,13 @@ div{
 	</div>
 
 
-
+<!-- 
 
 	<footer>
-		<!-- footer 건들지 말긔! -->
+		footer 건들지 말긔!
 	</footer>
 
-
+ -->
 
 
 
@@ -124,6 +114,3 @@ div{
 
 /* 		window.setTimeout('window.location.reload()', 20000); //60초마다 새로고침
  */	</script>
-
-</body>
-</html>
