shopdetail page 시작!

--- a/beautyChuSpring/src/main/webapp/view/yun-test.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-test.html
@@ -31,7 +31,6 @@ div{
 
  -->
 
-	<div id="wrap-chu" class="wrap-chu">
 
 
 		<div id=changediv >
@@ -39,8 +38,6 @@ div{
 			</div>
 
 		</div>
-
-	</div>
 
 
 <!-- 
@@ -54,8 +51,8 @@ div{
 
 
 	<!-- header, footer 로드 스크립트!! -->
-	<script type="text/javascript"
-		src='../js/resources/jquery-2.1.1.min.js'></script>
+<!-- 	<script type="text/javascript"
+		src='../js/resources/jquery-2.1.1.min.js'></script> -->
 	<script>
 		
 	
