--- a/beautyChuSpring/src/main/webapp/view/jy_comment.html
+++ b/beautyChuSpring/src/main/webapp/view/jy_comment.html
@@ -270,7 +270,7 @@
 
 	<script src="http://code.jquery.com/jquery-latest.js"
 		type="text/javascript"></script>
-	<script src="../js/resources/jy/jquery.DG_Slider.min.js"
+	<script src="../js/resources/jquery.DG_Slider.min.js"
 		type="text/javascript"></script>
 	<script type="text/javascript">
 		(function($) {
