--- a/beautyChuSpring/src/main/webapp/view/yun-shopthumbnail.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-shopthumbnail.html
@@ -12,12 +12,12 @@
 <style type="text/css">
 /* 스타일 적용 공간! */
 .yun-container {
-	/* width: 1200px; */
+	width: 100%;
 	margin: 0 auto;
 }
 
 .yun-info-bg {
-	width: 1140px;
+	width: 1150px;
 	height: 600px;
 	background-color: red;
 	float: left;
@@ -95,6 +95,10 @@
 			<div class="yun-box">8</div>
 			<div class="yun-box">9</div>
 			<div class="yun-box">10</div>
+			<div class="yun-box">11</div>
+			<div class="yun-box">12</div>
+			<div class="yun-box">13</div>
+			<div class="yun-box">14</div>
 		</div>
 	</div>
 
@@ -111,6 +115,8 @@
 		$('header').load('common/header.html');
 		$('footer').load('common/footer.html');
 
+		
+		<!--  로드 스크립트!! -->		
 		var container = $('.yun-container');
 		var elements = container.children();
 		var oldWrapPos = -1;
