--- a/beautyChuSpring/src/main/webapp/view/yun-shoppricelist.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-shoppricelist.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -45,7 +45,10 @@
 	height: 500px;
 }
 
-
+.yun-shopstyleimage {
+	width: 168px;
+	height: 178px;
+}
 </style>
 
 </head>
@@ -58,12 +61,38 @@
 
 
 	<div id="wrap-chu" class="wrap-chu">
- 
+ -->
 
 		<div id=yun-shopdetailcontainer>
 
 			<div id=yun-shopstylelist class=yun-shopcontainerdiv>
-
+				<div id=yun-shopstyle1 class=yun-shopstyle>
+					<img class=yun-shopstyleimage src="../images/style-list/s1.png">
+				</div>
+				<div id=yun-shopstyle2 class=yun-shopstyle>
+					<img class=yun-shopstyleimage src="../images/style-list/s2.png">
+				</div>
+				<div id=yun-shopstyle3 class=yun-shopstyle>
+					<img class=yun-shopstyleimage src="../images/style-list/s3.jpg">
+				</div>
+				<div id=yun-shopstyle4 class=yun-shopstyle>
+					<img class=yun-shopstyleimage src="../images/style-list/s4.jpg">
+				</div>
+				<div id=yun-shopstyle5 class=yun-shopstyle>
+					<img class=yun-shopstyleimage src="../images/style-list/s5.jpg">
+				</div>
+				<div id=yun-shopstyle6 class=yun-shopstyle>
+					<img class=yun-shopstyleimage src="../images/style-list/s6.jpg">
+				</div>
+				<div id=yun-shopstyle7 class=yun-shopstyle>
+					<img class=yun-shopstyleimage src="../images/style-list/s7.jpg">
+				</div>
+				<div id=yun-shopstyle8 class=yun-shopstyle>
+					<img class=yun-shopstyleimage src="../images/style-list/s8.jpg">
+				</div>
+				<div id=yun-shopstyle6 class=yun-shopstyle>
+					<img class=yun-shopstyleimage src="../images/style-list/s5.jpg">
+				</div>
 			</div>
 
 			<div id=yun-shoppricelist class=yun-shopcontainerdiv>
@@ -81,7 +110,7 @@
 
 		</div>
 
-	</div>
+<!-- 	</div>
 
 
 
@@ -93,6 +122,7 @@
 
 
 
+	header, footer 로드 스크립트!!
 	<script type="text/javascript"
 		src='../js/resources/jquery-2.1.1.min.js'></script>
 	<script>
@@ -105,4 +135,4 @@
 	</script>
 
 </body>
-</html>
+</html> -->
