--- a/beautyChuSpring/src/main/webapp/view/kh-slideimg.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-slideimg.html
@@ -1,96 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Carousel with modal</title>
-        <meta name="description" content="">
-        <meta name="author" content="ink, cookbook, recipes">
-        <meta name="HandheldFriendly" content="True">
-        <meta name="MobileOptimized" content="320">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-
-        <!-- Place favicon.ico and apple-touch-icon(s) here  -->
-
-        <link rel="shortcut icon" href="http://cdn.ink.sapo.pt/3.1.1/img/favicon.ico">
-        <link rel="apple-touch-icon" href="http://cdn.ink.sapo.pt/3.1.1/img/touch-icon-iphone.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="http://cdn.ink.sapo.pt/3.1.1/img/touch-icon-ipad.png"> 
-        <link rel="apple-touch-icon" sizes="120x120" href="http://cdn.ink.sapo.pt/3.1.1/img/touch-icon-iphone-retina.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="http://cdn.ink.sapo.pt/3.1.1/img/touch-icon-ipad-retina.png">
-        <link rel="apple-touch-startup-image" href="http://cdn.ink.sapo.pt/3.1.1/img/splash.320x460.png" media="screen and (min-device-width: 200px) and (max-device-width: 320px) and (orientation:portrait)">
-        <link rel="apple-touch-startup-image" href="http://cdn.ink.sapo.pt/3.1.1/img/splash.768x1004.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait)">
-        <link rel="apple-touch-startup-image" href="http://cdn.ink.sapo.pt/3.1.1/img/splash.1024x748.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape)">
-
-        <!-- load Ink's css from the cdn -->
-        <link rel="stylesheet" type="text/css" href="http://cdn.ink.sapo.pt/3.1.1/css/ink-flex.min.css">
-        <link rel="stylesheet" type="text/css" href="http://cdn.ink.sapo.pt/3.1.1/css/font-awesome.min.css">
-
-        <!-- load Ink's css for IE8 -->
-        <!--[if lt IE 9 ]>
-            <link rel="stylesheet" href="http://cdn.ink.sapo.pt/3.1.1/css/ink-ie.min.css" type="text/css" media="screen" title="no title" charset="utf-8">
-        <![endif]-->
-
-        <!-- test browser flexbox support and load legacy grid if unsupported -->
-        <script type="text/javascript" src="http://cdn.ink.sapo.pt/3.1.1/js/modernizr.js"></script>
-        <script type="text/javascript">
-            Modernizr.load({
-              test: Modernizr.flexbox,
-              nope : 'http://cdn.ink.sapo.pt/3.1.1/css/ink-legacy.min.css'
-            });
-        </script>
-
-        <!-- load Ink's javascript files from the cdn -->
-        <script type="text/javascript" src="http://cdn.ink.sapo.pt/3.1.1/js/ink-all.min.js"></script>
-        <script type="text/javascript" src="http://cdn.ink.sapo.pt/3.1.1/js/autoload.js"></script>
-        <style>
-			* 		{
-				border: 1px solid red;
-			}
-
-            body {
-                background: #ededed;
-            }
-
-            .panel {
-                border-radius: 2px;
-                -webkit-box-shadow: #dddddd 0 1px 1px 0;
-                -moz-box-shadow: #dddddd 0 1px 1px 0;
-                box-shadow: #dddddd 0 1px 1px 0;
-                padding: 1em;
-                border: 1px solid #BBB;
-                background-color: #FFF;
-            }
-
-            #thumbs_carousel .slide {
-                opacity: 0.6;
-            }
-            #thumbs_carousel .slide.active {
-                opacity: 1;
-            }
-            .vertical-space {
-				width: 600px;
-				text-align: center;
-			}
-			.column-group.gutters {
-				margin-left: -16px;
-			}
-			/*  img {
-			height: 50px;
-			} */
-			.kh-small-shop {
-				height: 50px;
-			}
-			.ink-carousel {
-				height: 280px;
-			}
-			#thumbs_carousel {
-				height: 60px;
-			}
-        </style>
-
-    </head>
-<body>
 <div class="ink-grid vertical-space">
 
     <!--[if lte IE 9 ]>
@@ -112,22 +19,22 @@
             <ul class="stage column-group gutters" id="trigger-modal">
                 <li class="slide all-100">
                     <figure class="ink-image">
-                        <a href="#"><img src="http://lorempixel.com/1650/928/city/1"></a>
+                        <a href="#"><img class="kh-big-img" src="http://lorempixel.com/1650/928/city/1"></a>
                     </figure>
                 </li>
                 <li class="slide all-100">
                     <figure class="ink-image">
-                        <a href="#"><img src="http://lorempixel.com/1650/928/city/4"></a>
+                        <a href="#"><img class="kh-big-img" src="http://lorempixel.com/1650/928/city/4"></a>
                     </figure>
                 </li>
                 <li class="slide all-100">
                     <figure class="ink-image">
-                        <a href="#"><img src="http://lorempixel.com/1650/928/city/6"></a>
+                        <a href="#"><img class="kh-big-img" src="http://lorempixel.com/1650/928/city/6"></a>
                     </figure>
                 </li>
                 <li class="slide all-100">
                     <figure class="ink-image">
-                        <a href="#"><img src="http://lorempixel.com/1650/928/city/7"></a>
+                        <a href="#"><img class="kh-big-img" src="http://lorempixel.com/1650/928/city/7"></a>
                     </figure>
                 </li>
             </ul>
@@ -145,16 +52,16 @@
         <div id="thumbs_carousel" class="ink-carousel" data-autoload="false">
             <ul class="stage column-group gutters unstyled">
                 <li class="slide all-20 active">
-                    <a href="#"><img class="kh-small-shop" src="http://lorempixel.com/480/270/city/1"></a>
+                    <a href="#"><img class="kh-small-img" src="http://lorempixel.com/480/270/city/1"></a>
                 </li>
                 <li class="slide all-20">
-                    <a href="#"><img class="kh-small-shop" src="http://lorempixel.com/480/270/city/4"></a>
+                    <a href="#"><img class="kh-small-img" src="http://lorempixel.com/480/270/city/4"></a>
                 </li>
                 <li class="slide all-20">
-                    <a href="#"><img class="kh-small-shop" src="http://lorempixel.com/480/270/city/6"></a>
+                    <a href="#"><img class="kh-small-img" src="http://lorempixel.com/480/270/city/6"></a>
                 </li>
                 <li class="slide all-20">
-                    <a href="#"><img class="kh-small-shop" src="http://lorempixel.com/480/270/city/7"></a>
+                    <a href="#"><img class="kh-small-img" src="http://lorempixel.com/480/270/city/7"></a>
                 </li>
             </ul>
         </div>
@@ -286,4 +193,3 @@ Ink.requireModules(['Ink.UI.Carousel_1', 'Ink.UI.Modal_1', 'Ink.Dom.Event_1', 'I
 </script>
 
 </body>
-</html>
