--- a/beautyChuSpring/src/main/webapp/view/kh-test.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-test.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 <meta charset="UTF-8">
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="description" content="">
-        <meta name="author" content="ink, cookbook, recipes">
-        <meta name="HandheldFriendly" content="True">
-        <meta name="MobileOptimized" content="320">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="description" content="">
+<meta name="author" content="ink, cookbook, recipes">
+<meta name="HandheldFriendly" content="True">
+<meta name="MobileOptimized" content="320">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
 <title>Beauty Chu~♥</title>
 
@@ -19,37 +20,55 @@
 <link rel="stylesheet" type="text/css" href="../css/common.css">
 
 <!-- 슬라이드 이미지 -->
-        <link rel="shortcut icon" href="http://cdn.ink.sapo.pt/3.1.1/img/favicon.ico">
-        <link rel="apple-touch-icon" href="http://cdn.ink.sapo.pt/3.1.1/img/touch-icon-iphone.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="http://cdn.ink.sapo.pt/3.1.1/img/touch-icon-ipad.png"> 
-        <link rel="apple-touch-icon" sizes="120x120" href="http://cdn.ink.sapo.pt/3.1.1/img/touch-icon-iphone-retina.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="http://cdn.ink.sapo.pt/3.1.1/img/touch-icon-ipad-retina.png">
-        <link rel="apple-touch-startup-image" href="http://cdn.ink.sapo.pt/3.1.1/img/splash.320x460.png" media="screen and (min-device-width: 200px) and (max-device-width: 320px) and (orientation:portrait)">
-        <link rel="apple-touch-startup-image" href="http://cdn.ink.sapo.pt/3.1.1/img/splash.768x1004.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait)">
-        <link rel="apple-touch-startup-image" href="http://cdn.ink.sapo.pt/3.1.1/img/splash.1024x748.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape)">
+<link rel="apple-touch-icon"
+	href="http://cdn.ink.sapo.pt/3.1.1/img/touch-icon-iphone.png">
+<link rel="apple-touch-icon" sizes="76x76"
+	href="http://cdn.ink.sapo.pt/3.1.1/img/touch-icon-ipad.png">
+<link rel="apple-touch-icon" sizes="120x120"
+	href="http://cdn.ink.sapo.pt/3.1.1/img/touch-icon-iphone-retina.png">
+<link rel="apple-touch-icon" sizes="152x152"
+	href="http://cdn.ink.sapo.pt/3.1.1/img/touch-icon-ipad-retina.png">
+<link rel="apple-touch-startup-image"
+	href="http://cdn.ink.sapo.pt/3.1.1/img/splash.320x460.png"
+	media="screen and (min-device-width: 200px) and (max-device-width: 320px) and (orientation:portrait)">
+<link rel="apple-touch-startup-image"
+	href="http://cdn.ink.sapo.pt/3.1.1/img/splash.768x1004.png"
+	media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait)">
+<link rel="apple-touch-startup-image"
+	href="http://cdn.ink.sapo.pt/3.1.1/img/splash.1024x748.png"
+	media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape)">
 
-        <!-- load Ink's css from the cdn -->
-        <link rel="stylesheet" type="text/css" href="http://cdn.ink.sapo.pt/3.1.1/css/ink-flex.min.css">
-        <link rel="stylesheet" type="text/css" href="http://cdn.ink.sapo.pt/3.1.1/css/font-awesome.min.css">
+<!-- load Ink's css from the cdn -->
+<link rel="stylesheet" type="text/css"
+	href="http://cdn.ink.sapo.pt/3.1.1/css/ink-flex.min.css">
+<link rel="stylesheet" type="text/css"
+	href="http://cdn.ink.sapo.pt/3.1.1/css/font-awesome.min.css">
 
-        <!-- load Ink's css for IE8 -->
-        <!--[if lt IE 9 ]>
+<!-- load Ink's css for IE8 -->
+<!--[if lt IE 9 ]>
             <link rel="stylesheet" href="http://cdn.ink.sapo.pt/3.1.1/css/ink-ie.min.css" type="text/css" media="screen" title="no title" charset="utf-8">
         <![endif]-->
 
-        <!-- test browser flexbox support and load legacy grid if unsupported -->
-        <script type="text/javascript" src="http://cdn.ink.sapo.pt/3.1.1/js/modernizr.js"></script>
-        <script type="text/javascript">
+<!-- test browser flexbox support and load legacy grid if unsupported -->
+<script type="text/javascript"
+	src="http://cdn.ink.sapo.pt/3.1.1/js/modernizr.js"></script>
+<script type="text/javascript">
             Modernizr.load({
               test: Modernizr.flexbox,
               nope : 'http://cdn.ink.sapo.pt/3.1.1/css/ink-legacy.min.css'
             });
         </script>
 
-        <!-- load Ink's javascript files from the cdn -->
-        <script type="text/javascript" src="http://cdn.ink.sapo.pt/3.1.1/js/ink-all.min.js"></script>
-        <script type="text/javascript" src="http://cdn.ink.sapo.pt/3.1.1/js/autoload.js"></script>
-
+<!-- load Ink's javascript files from the cdn -->
+<script type="text/javascript"
+	src="http://cdn.ink.sapo.pt/3.1.1/js/ink-all.min.js"></script>
+<script type="text/javascript"
+	src="http://cdn.ink.sapo.pt/3.1.1/js/autoload.js"></script>
+	
+	<!-- 댓글CSS -->
+        <link rel="stylesheet" href="../css/resources/jy_DG_Slider.css"
+	type="text/css" media="all" />
+	
 <style type="text/css">
 /* 스타일 적용 공간! */
 .yun-container {
@@ -58,7 +77,7 @@
 }
 
 .yun-info-bg {
-	width: 1140px;
+	width: 1150px;
 	height: 600px;
 	background-color: red;
 	float: left;
@@ -90,14 +109,13 @@
 }
 
 /* yun-test.html css */
-
 #changediv {
 	position: relative;
 	width: 600px;
 	height: 300px;
 }
 
-#changediv div{
+#changediv div {
 	background-size: 600px 300px;
 	width: 100%;
 	height: 100%;
@@ -110,51 +128,92 @@
 }
 
 /* 슬라이드 이미지 CSS */
+/*  * {
+	border: 1px solid blue;
+}   */
 
-			* 		{
-				border: 1px solid red;
-			}
+body {
+	background: #ededed;
+}
 
-            body {
-                background: #ededed;
-            }
+.panel {
+	border-radius: 2px;
+	-webkit-box-shadow: #dddddd 0 1px 1px 0;
+	-moz-box-shadow: #dddddd 0 1px 1px 0;
+	box-shadow: #dddddd 0 1px 1px 0;
+	padding: 1em;
+	border: 1px solid #BBB;
+	background-color: #FFF;
+	height: 480px;
+}
 
-            .panel {
-                border-radius: 2px;
-                -webkit-box-shadow: #dddddd 0 1px 1px 0;
-                -moz-box-shadow: #dddddd 0 1px 1px 0;
-                box-shadow: #dddddd 0 1px 1px 0;
-                padding: 1em;
-                border: 1px solid #BBB;
-                background-color: #FFF;
-            }
+#thumbs_carousel .slide {
+	opacity: 0.6;
+}
 
-            #thumbs_carousel .slide {
-                opacity: 0.6;
-            }
-            #thumbs_carousel .slide.active {
-                opacity: 1;
-            }
-            .vertical-space {
-				width: 600px;
-				text-align: center;
-			}
-			.column-group.gutters {
-				margin-left: -16px;
-			}
-			/*  img {
-			height: 50px;
-			} */
-			.kh-small-shop {
-				height: 50px;
-			}
-			.ink-carousel {
-				height: 280px;
-			}
-			#thumbs_carousel {
-				height: 60px;
-			}
+#thumbs_carousel .slide.active {
+	opacity: 1;
+}
 
+.vertical-space {
+	width: 561px;
+	text-align: center;
+	margin-left: 0px;
+	float: left;
+}
+
+.column-group.gutters {
+	margin-left: -16px;
+}
+
+
+/* .ink-carousel {
+	height: 390px;
+} */
+
+.kh-small-shop {
+	height: 50px;
+}
+
+.ink-carousel {
+	height: 390px;
+}
+
+#thumbs_carousel {
+	height: 60px;
+}
+.all-20 {
+	width: 120px;
+	height: 100px;
+}
+.kh-big-img {
+ 	height: 360px;
+}
+.kh-small-img {
+	height: 60px;
+}
+.ink-carousel .ink-navigation {
+margin: 6px;
+}
+
+.demo-wrap {
+	float: right;
+	width: 583px;
+}
+.demo-wrap .DG-wrapper {
+	width: 520px;
+	position: relative;
+	margin-left: 0px;
+}
+.kh-shopInfo {
+		float: right;
+		width: 573px;
+		margin-top: 29px;
+		margin-bottom: 12px;
+}
+p {
+	margin-bottom: 7px;
+}
 </style>
 
 </head>
@@ -229,7 +288,7 @@
 					$(this).remove();
 				});
 				$('.yun-edge').after('<div class="yun-info-bg"></div>');
-				$('.yun-info-bg').load('kh-slideimg1.html');
+				$('.yun-info-bg').load('kh-detailPart.html');
 				$('.yun-info-bg').slideDown();
 			}
 		});
