--- a/beautyChuSpring/src/main/webapp/view/kh-test.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-test.html
@@ -79,7 +79,7 @@
 .yun-info-bg {
 	width: 1150px;
 	height: 600px;
-	background-color: red;
+	background-color: #DCDBD9;
 	float: left;
 	position: relative;
 	margin: 5px;
