--- a/beautyChuSpring/src/main/webapp/view/yun-shopthumbnail.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-shopthumbnail.html
@@ -117,6 +117,53 @@
 	height: 178px;
 }
 /* ============================================================== */
+/* ============================================================== */
+/* yun-test.html css */
+
+
+#yun-styledetailcontainer {
+	width: 1150px;
+	height: 600px;
+}
+
+.yun-stylecontainerdiv {
+	width: 528px;
+	height: 560px;
+	float: left;
+	margin-left: 30px;
+	margin-top: 20px;
+}
+
+#yun-buttondiv {
+	height: 50px;
+	float: right;
+}
+
+.yun-stylephotobig {
+	width: 520px;
+	height: 500px;
+	float: left;
+	margin-bottom: 3px;
+}
+
+.yun-stylephotosmall {
+	width: 50px;
+	height: 50px;
+	float: left;
+	margin-left: 3px;
+}
+
+#yun-styletitle {
+	height: 90px;
+}
+
+#yun-stylecontentdetail {
+	height: 130px;
+}
+
+.yun-stylecomment{
+	width : 100%;
+}
 
 </style>
 
